--- a/styles.css
+++ b/styles.css
@@ -245,44 +245,12 @@ body {
     height: 16px;
 }
 
-.grass {
-    position: absolute;
-    bottom: 0;
-    left: 0;
+.grass-image {
+    margin-top: 30px;
     width: 100%;
-    height: 80px;
-    pointer-events: none;
-}
-
-.grass-blade {
-    position: absolute;
-    bottom: 0;
-    width: 3px;
-    height: 40px;
-    background: linear-gradient(to top, #2d5016, #3d6b1f, transparent);
-    border-radius: 50% 50% 0 0;
-    transform-origin: bottom center;
-    animation: sway 3s ease-in-out infinite;
-    opacity: 0.6;
-}
-
-.grass-blade:nth-child(odd) {
-    height: 50px;
-    opacity: 0.5;
-}
-
-.grass-blade:nth-child(3n) {
-    height: 35px;
-    opacity: 0.7;
-}
-
-@keyframes sway {
-    0%, 100% {
-        transform: rotate(-2deg);
-    }
-    50% {
-        transform: rotate(2deg);
-    }
+    max-width: 600px;
+    height: auto;
+    opacity: 0.35;
 }
 
 .footer {
