--- a/styles.css
+++ b/styles.css
@@ -653,6 +653,12 @@ body {
     position: absolute;
     left: 50%;
     transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    overflow: hidden;
 }
 
 .mini-card h3 {
